Wed Oct 13 06:15:00 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Framework_Component.h:
        * ace/Framework_Component.inl:
        * ace/Framework_Component.cpp:
        * ace/Framework_Component_T.h:
          Use ACE_Copy_Disabled, change c-style cast to const cast, use
          sync macros instead of ACE_MT. Thanks to Ranjit Hande
          <hande at avaya dot com> for reporting the c-style cast warnings

        * tests/Framework_Component_Test.h:
          Layout change

Tue Oct 12 21:12:51 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * bin/DependencyGenerator/GNUObjectGenerator.pm:

          Fixed incorrect Perl regex escaping from my previous commit.

Tue Oct 12 11:41:00 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * tests/Bug_3911_Regression_Test.cpp:
          Fuzz fixes.

Tue Oct 12 08:06:00 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * tests/Bug_3911_Regression_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
          Added reproducer test for Bugzilla #3911.

Mon Oct 11 16:31:12 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * bin/DependencyGenerator/GNUObjectGenerator.pm:

          If the source file contains '../', remove the directory part from
          the name of the object file (see gnu.mpd:383 OBJS make variable).

Mon Oct 11 11:53:43 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Dev_Poll_Reactor.cpp:
        * ace/Select_Reactor_T.cpp:
          Fixed problems with threads=0, thanks to Elez <elezsh at gmail dot com>
          for reporting this and providing a patch

Fri Oct  8 11:19:44 UTC 2010  Olli Savia  <ops@iki.fi>

        * protocols/ace/RMCast/Flow.cpp:
          Added missing include.

Fri Oct  8 08:42:37 UTC 2010  Olli Savia  <ops@iki.fi>

        * ace/config-linux-common.h:
        * ace/os_include/os_unistd.h:
        * configure.ac:
        * m4/config_h.m4:
          Removed references to ACE_LACKS_PREAD_PROTOTYPE. It is no